--- a/clases.html
+++ b/clases.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<!-- saved from url=(0068)https://main-%2Dharley-davidson-egm.netlify.app/pages/productos.html -->
+<!DOCTYPE html
 <html lang="es"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Harley-Davidson® - Productos</title>
+    <title>Yoga Diare - Clases</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Metas -->
-    <meta name="description" content="¡Consulte nuestro blog para obtener artículos interesantes e informativos sobre motocicletas! ¡Entonces, visítenos cerca de Buffalo, NY para obtener más información!">
-    <meta name="author" content="Erick Giraldo">
+    <meta name="description" content="¡Consultá nuestra tienda para comprar artículos de Yoga! ¡No te lo pierdas!">
+    <meta name="author" content="Demián Román">
     <!-- CSS only -->
     <link href="./files/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./files/index.css">
-    <!-- <link rel="shortcut icon" href="https://main--harley-davidson-egm.netlify.app/assets/images/favicon.webp" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
 </head>
 
 <body>
