--- a/nosotros.html
+++ b/nosotros.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<!-- saved from url=(0067)https://main-%2Dharley-davidson-egm.netlify.app/pages/nosotros.html -->
 <html lang="es"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoga Diare - Nosotros</title>  
     <!-- Metas -->
-      <meta name="description" content="¡Consulte nuestro blog para obtener artículos interesantes e informativos sobre motocicletas! ¡Entonces, visítenos cerca de Buffalo, NY para obtener más información!">
-    <meta name="author" content="Erick Giraldo">
+      <meta name="description" content="¡Consultá nuestra tienda para comprar artículos de Yoga! ¡No te lo pierdas!">
+    <meta name="author" content="Demián Román">
     <!-- CSS only -->
     <link href="./files/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./files/index.css">
