--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Demián Román">
     <!-- CSS only -->
     <link href="./files/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./files/index.css">
+    <link rel="stylesheet" href="./scss/estilo.scss">
     <link rel="shortcut icon" href="" type="image/x-icon">
   </head>
   <body>
@@ -66,7 +66,7 @@
                 </div>
               </div>
               <div class="container col-lg-6 col-md-12 contenido-imagen">
-                <img class="img-fluid" src="/img/ABCyoga.jpg" alt="Harley-Davidson-bg-1" width="600px">
+                <img class="img-fluid" src="/img/ABCyoga.jpg" alt="Yoga" width="600px">
               </div>
             </div>
           </div>
