--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Demián Román">
     <!-- CSS only -->
     <link href="./files/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./scss/estilo.scss">
+    <link rel="stylesheet" href="./Nosotros_files/index.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
   </head>
   <body>
@@ -60,7 +60,7 @@
                   </li>
                 </ul>
                 <div class="btn-container">
-                  <button class="btn-hover btn-inicio" onclick="location.href=&#39;./pages/contacto.html#formulario&#39;">
+                  <button class="btn-hover btn-inicio" onclick="location.href=&#39;./contacto.html#formulario&#39;">
                   Contacto
                 </button>
                 </div>
